--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <div class="collections">
             <div class="card">
                 <h3>Roupinhas</h3>
-                <p>Maciez e conforto com tecidos 100% algodão orgânico, ideais para a pele delicada dos bebês.</p>
+                <p>Maciez e conforto com tecidos 100% algodão, ideais para a pele delicada dos bebês.</p>
             </div>
             <div class="card">
                 <h3>Enxoval</h3>
@@ -50,10 +50,9 @@
     <div class="section" id="about">
         <h2>Sobre Nós</h2>
         <p>O Berço de Algodão nasceu do amor e dedicação à infância. Nosso objetivo é oferecer produtos de alta qualidade que garantam conforto, segurança e carinho aos bebês e tranquilidade aos pais.</p>
-        <p><strong>Missão:</strong> Proporcionar o melhor em conforto e cuidado para os primeiros momentos do seu bebê.</p>
-        <p><strong>Visão:</strong> Ser referência em produtos infantis que unem qualidade, sustentabilidade e amor.</p>
+        <p><strong>Objetivo:</strong> Proporcionar o melhor em conforto e cuidado para os primeiros momentos do seu bebê.</p>
+        <p><strong>Missão:</strong> Ser referência em produtos infantis que unem qualidade, sustentabilidade e amor.</p>
         <p><strong>Valores:</strong> Cuidado, segurança, sustentabilidade, carinho e inovação.</p>
-        <p><strong>Conceito: </strong></p>
     </div>
 
     <div class="section" id="privacy">
